test/Fail/Issue586a.agda
-- Andreas, 2014-09-09

{-# NON_TERMINATING #-}
Foo : Set
Foo = Foo
