test/Fail/Issue586a.err
Issue586a.agda:3.1-24: error: [SafeFlagNonTerminating]
Cannot use NON_TERMINATING pragma with safe flag.
